# zmanim-rust

./: .gitignore  Cargo.toml  README.md  Testing.md  a.java  a.json  a.py  bad.md  build.rs  pyproject.toml  schema.py  tarpaulin-report.html  todo.md
.github/workflows/: rust.yml
src/: add_date.rs  astronomical_calculator.rs  astronomical_calendar.rs  constants.rs  daf.rs  defmt.rs  geolocation.rs  hebrew_holiday_calendar.rs  jewish_calendar.rs  jewish_date.rs  lib.rs  math.rs  noaa_calculator.rs  parshas.rs  tefila_rules.rs  test_utils.rs  time_and_place.rs  traits.rs  zmanim_calendar.rs
src/tests/: astronomical_calculator_test.rs  astronomical_calendar_test.rs  geolocation_test.rs  jewish_calendar_test.rs  jewish_date_test.rs  mod.rs  spa_tests.rs  tefila_rules_test.rs  test_utils.rs  zmanim_calendar_test.rs
src/tests/java/: java_bindings.rs  java_compare.rs  java_rng.rs  mod.rs
