[package]
edition = "2024"
name = "yid-sdk"
version = "0.1.0"

[features]
default = []
std = []

[dependencies]
libm = "0.2.15"

[dependencies.chrono]
version = "0.4.41"
default-features = false

[dependencies.icu_calendar]
version = "2.0.3"
features = ["unstable"]
default-features = false

[dependencies.num_enum]
version = "0.7.5"
default-features = false

[dependencies.tinystr]
version = "0.8.2"
default-features = false

[dev-dependencies]
num_enum = "0.7.5"
proptest = "1.9.0"
rand = "0.8.5"
tinystr = "0.8.2"

[dev-dependencies.chrono-tz]
version = "0.10.4"
default-features = false

[dev-dependencies.j4rs]
git = "https://github.com/astonbitecode/j4rs"
rev = "478273"


[lib]
name = "jew_sdk"
crate-type = ["cdylib"]
