[package]
edition = "2024"
name = "yid-sdk"
version = "0.1.0"

[features]
default = ["std"]
std = []
no_std = ["core_maths"]
defmt = ["dep:defmt"]


[dependencies]
core_maths = { version = "0.1.1", optional = true }
defmt = { version = "1.0.1", optional = true }
time = { version = "0.3.44", default-features = false }


[dependencies.chrono]
version = "0.4.41"
default-features = false

[dependencies.icu_calendar]
version = "2.0.3"
features = ["unstable"]
default-features = false

[dependencies.num_enum]
version = "0.7.5"
default-features = false

[dependencies.tinystr]
version = "0.8.2"
default-features = false

[dev-dependencies]
num_enum = "0.7.5"
proptest = "1.9.0"
rand = "0.8.5"
tinystr = "0.8.2"

[dev-dependencies.chrono-tz]
version = "0.10.4"
default-features = false

[dev-dependencies.j4rs]
git = "https://github.com/astonbitecode/j4rs"
rev = "478273"


[lib]
name = "jew_sdk"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
index_overflow = "warn"


[lints]
workspace = true
